# os-placement

./: .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  requirements.txt  setup.cfg
os_placement/provider/: config.py
os_placement/tests/: provider-1.0.yaml  test_provider_config.py
